* Multi-invocant calls like `foo($x, $y: $z)` are no longer legal
* Exclusive-range operators : `^..`, `..^` and `^..^` implemented
* `when .does(Foo)`, `when $_.does(Foo)` and `when Foo` are all implemented
* `is export` is no longer no-op
* Fully qualified subroutines now implemented
* `loop {} while` and `loop {} until` now implemented
* `&infix<=>` can now be used as the assignment operator

=== Bundled Modules

* New `Benchmark` module added
* New `Text::Glob` module added
* New `Date` module added
* `libwww-perl` added
** New `HTTP::Headers`, `HTTP::Message` modules added
** `LWP-Simple` now moved here
* `CGI` has been improved:
** Now has: `escapeHTML`, `unescapeHTML`, `redirect`
** Supports more HTTP headers in `header`
** New module `CGI::Util` added
* Coro-based iterator added to `Tree` module
* Many more code sketches and documentation added to `Perl-MetaModel`
* `Test::Builder` is now dangerously close to completely working
* `use lib 'path';` now works

=== Tests, Examples and Documentations

* Pugs Apocryphon 2 improved and edited in `docs/02Internals.pod`
* More Haddock documentation added to the Haskell source
* Some new test and several tests refactored, we now have almost 5700 tests
* New JAPH for Italian Perl Workshop added in `examples/japh`
* New IRC bot `evalbot` added to `examples/network`
* Many improvements to `util/perl6.vim` to handle new features 
* Some new additions and cleanup of the cookbook
* `examples/network/screen-nodestatus.p6` added to monitor host aliveness for GNU screen
* Perl 6 port of Perl Power Tools begun in `examples/ppt`

=== Bug Fixes

* `times` now really works on Win32
* `readline()` now reads utf-8
* `pugs -MFoo` now means `use Foo` not `require Foo`
* Class methods like `Foo.bar` now dispatch to `Foo::bar` instead of 
  to `Class::bar`
* `isa` now handles class names as the invocant, so
  `Foo.isa(Foo)` is now always true
* `when .isa(Foo)` is no longer parsed as `when $_ ~~ .isa(Foo)` now